Continue work with Exercise 8. Continue work with "Store" endpoint.
